<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background2"
    android:screenOrientation="landscape" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:onClick="onClickReturn"
        style="@style/custombutton1"
        android:text="@string/returnLbl" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/sound"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<RadioGroup
    	android:id="@+id/radioSet"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignLeft="@+id/returnBtn"
    	android:layout_below="@+id/textView2"
    	android:layout_marginTop="50dp" >

    <RadioButton
        android:id="@+id/offRadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSet"
        android:text="@string/off" />

    <RadioButton
        android:id="@+id/onRadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="25dp"
       
        android:onClick="onSet"
        android:text="@string/on" />

</RadioGroup>

</RelativeLayout>