<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background2"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/creditsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:onClick="onClickReturn"
        style="@style/custombutton1"
        android:text="@string/returnLbl" />

    <TextView
        android:id="@+id/creditNameTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditsTxt"
        android:layout_centerHorizontal="true"
        android:text="@string/alexName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/creditNameTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditNameTxt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/dylanName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/creditNameTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditNameTxt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/patrickName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>