<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="40sp" />

    <Button
        android:id="@+id/options"
        android:layout_width="325dp"
    	android:layout_height="50dp"
    	android:layout_marginTop="5dp"
        android:layout_alignLeft="@+id/play"
        android:layout_below="@+id/play"
        android:onClick="onClickOptions"
        style="@style/custombutton1"
        android:text="@string/options" />

    <Button
        android:id="@+id/play"
        android:layout_width="325dp"
    	android:layout_height="50dp"
    	android:layout_marginTop="5dp"
        android:layout_below="@+id/titleText"
        android:onClick="onClickPlay"
        style="@style/custombutton1"
        android:text="@string/play" />

    <Button
        android:id="@+id/credits"
        android:layout_width="325dp"
    	android:layout_height="50dp"
    	android:layout_marginTop="5dp"
        android:layout_alignLeft="@+id/options"
        android:layout_below="@+id/options"
        android:onClick="onClickCredits"
        style="@style/custombutton1"
        android:text="@string/credits" />

</RelativeLayout>